# talent-plan-progress

./: Cargo.toml  README.md
pna/building-blocks/bb1/: Cargo.toml
pna/building-blocks/bb1/src/: main.rs
pna/building-blocks/bb2/: Cargo.toml  output.json
pna/building-blocks/bb2/src/: lib.rs
pna/kvs/: Cargo.toml
pna/kvs/src/: error.rs  lib.rs
